# prvw

./: .gitignore  .mcp.json  .mise.toml  .oxfmtrc.json  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.claude/commands/: execute.md  plan.md  release.md
.claude/rules/: git-conventions.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .prettierignore  .stylelintrc.mjs  CLAUDE.md  Cargo.toml  Info.plist  build.rs  eslint.config.js  package.json  tsconfig.json  vite.config.js
apps/desktop/build-assets/dcps/: Canon EOS R8.dcp  LICENSE  PANASONIC DC-S5M2.dcp
apps/desktop/examples/: dcp-inspect.rs  dng-opcodes-inspect.rs  raw-dev-dump.rs  raw-tune.rs
apps/desktop/resources/: AppIcon.icns
apps/desktop/scripts/: tauri-wrapper.js
apps/desktop/src/: about.rs  app.css  app.html  app.rs  color.rs  commands.rs  decoding.rs  diagnostics.rs  directory.rs  display_profile.rs  image_loader.rs  imaging.rs  input.rs  macos_delegate.rs  macos_open_handler.rs  main.rs  menu.rs  native_ui.rs  onboarding.rs  overlay.wgsl  pixels.rs  platform.rs  preloader.rs  qa.rs  qa_server.rs  render.rs  renderer.rs  settings.rs  shader.wgsl  text.rs  updater.rs  view.rs  window.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: directory.rs  fe_log.rs  image_loader.rs  macos_open_handler.rs  main.rs  menu.rs  onboarding.rs  preloader.rs  settings.rs  updater.rs  view.rs
apps/desktop/src-tauri/src/mcp/: CLAUDE.md  config.rs  executor.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
apps/desktop/src/app/: CLAUDE.md  executor.rs  shared_state.rs
apps/desktop/src/color/: CLAUDE.md  chroma_denoise.rs  clarity.rs  delta_e.rs  display_profile.rs  highlight_recovery.rs  lens_correction.rs  mod.rs  profiles.rs  saturation.rs  settings_panel.rs  sharpen.rs  tone_curve.rs  transform.rs
apps/desktop/src/color/dcp/: CLAUDE.md  apply.rs  bundled.rs  discovery.rs  embedded.rs  family_aliases.rs  illuminant.rs  mod.rs  parser.rs
apps/desktop/src/decoding/: CLAUDE.md  dispatch.rs  dng_opcodes.rs  generic.rs  jpeg.rs  mod.rs  orientation.rs  raw.rs  raw_flags.rs
apps/desktop/src/file_associations/: CLAUDE.md  mod.rs  settings_panel.rs
apps/desktop/src/imaging/: CLAUDE.md  color.rs  directory.rs  loader.rs  preloader.rs
apps/desktop/src/lib/: log-bridge.ts  tauri.ts
apps/desktop/src/lib/components/: Header.svelte  ImageViewer.svelte  Onboarding.svelte
apps/desktop/src/navigation/: CLAUDE.md  directory.rs  mod.rs  preloader.rs
apps/desktop/src/onboarding/: CLAUDE.md  checkmark.rs  defaults_sentence.rs  mod.rs
apps/desktop/src/platform/: macos.rs
apps/desktop/src/platform/macos/: CLAUDE.md  native_ui.rs  open_handler.rs  ui_common.rs
apps/desktop/src/platform/macos/native_ui/: CLAUDE.md  about.rs  onboarding.rs  settings.rs
apps/desktop/src/qa/: CLAUDE.md  http.rs  mcp.rs  mod.rs  server.rs
apps/desktop/src/render/: CLAUDE.md  renderer.rs  text.rs
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/src/routes/about/: +page.svelte
apps/desktop/src/routes/settings/: +page.svelte
apps/desktop/src/settings/: CLAUDE.md  mod.rs  persistence.rs  widgets.rs  window.rs
apps/desktop/src/settings/panels/: general.rs  mod.rs  raw.rs
apps/desktop/src/zoom/: CLAUDE.md  mod.rs  settings_panel.rs  view.rs
apps/desktop/tests/: color_management.rs  integration.rs
apps/desktop/tests/fixtures/raw/: README.md  licenses.md  synthetic-bayer-128.dng
apps/website/: .env.example  CLAUDE.md  Dockerfile  astro.config.mjs  docker-compose.yml  eslint.config.js  nginx.conf  package.json
apps/website/public/: latest.json
benchmarks/zune-vs-turbojpeg-decode/: Cargo.toml  README.md  findings.md
benchmarks/zune-vs-turbojpeg-decode/src/: main.rs
docs/: architecture.md  design-principles.md  mcp-server.md  style-guide.md
docs/guides/: building.md  releasing.md  server-setup.md
docs/notes/: icc-level-2-display-color-management.md  lensfun-rs.md  raw-roadmap.md  raw-support-phase1.md  raw-support-phase2.md  raw-support-phase3.md  raw-support-phase4.md  raw-support-phase5.md  raw-support-phase6.md  secondary-window-ui-technology.md  third-party-profiles.md
docs/specs/: project-bootstrap-plan.md
infra/deploy-webhook/: deploy-website.sh  hooks.json
scripts/: build-and-sign.sh  create-dmg.sh  release.sh  sync-bundled-dcps.sh
scripts/check/: CLAUDE.md  colors.go  go.mod  main.go  runner.go  stats.go  utils.go
scripts/check/checks/: common.go  desktop-oxfmt.go  desktop-rust-clippy.go  desktop-rust-rustfmt.go  desktop-rust-tests.go  desktop-svelte-build.go  desktop-svelte-check.go  desktop-svelte-eslint.go  desktop-svelte-prettier.go  desktop-svelte-stylelint.go  registry.go  registry_test.go  scripts-go-deadcode.go  scripts-go-gocyclo.go  scripts-go-gofmt.go  scripts-go-misspell.go  scripts-go-staticcheck.go  scripts-go-vet.go  (+5 more)
(+14 files in other folders)
