[package]
name = "prvw"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal image viewer for macOS"
license = "BUSL-1.1"

[dependencies]
winit = "0.30.13"
wgpu = "29.0.1"
pollster = "0.4.0"
muda = "0.17.2"
image = "0.25.10"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
rayon = "1.11.0"
log = "0.4.29"
env_logger = "0.11.10"
clap = { version = "4.6.0", features = ["derive"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
bytemuck_derive = "1.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"

[profile.dev.package.zune-jpeg]
opt-level = 3

[dev-dependencies]
tempfile = "3.27.0"
