[package]
name = "prvw"
version = "0.5.0"
edition = "2024"
description = "A fast, minimal image viewer for macOS"
license = "BUSL-1.1"

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
image = "0.25.6"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
rayon = "1.11.0"
log = "0.4.29"
tauri-plugin-log = "2.8.0"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
nom-exif = { version = "2.7.0", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1.51.1", features = ["net", "rt", "macros", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = [
    "NSAppleEventDescriptor",
    "NSAppleEventManager",
    "NSString",
    "NSURL",
    "objc2-core-services",
] }

window-vibrancy = "0.7.1"

[build-dependencies]
tauri-build = "2.5.6"

[dev-dependencies]
tempfile = "3.27.0"
